test/runnable/set-field-through-pointer.crow
import
	crow/io/print: out, print

main nat^(_ string[]) unsafe, summon
	r mut r = 0,
	rp r mut* = &r
	rp->x := 3
	out print "{r x}"
	()

r record mut by-val
	x mut nat
