test/compile-errors/pointer-expression-failed-inference.crow
main nat^(_ string[]) unsafe
	x = 0
	p nat8* = (&x).pointer-cast
	()
